<resources>
    <string name="app_name">Messenger</string>
    <string name="send">Send</string>
    <string name="enter_message_here">Enter Message Here</string>
    <string name="reply">Reply</string>
    <string name="enter_reply">Enter Your Reply Here</string>
    <string name="text_header_reply">Reply Recieved</string>
    <string name="message_recieved">Message Recieved</string>
</resources>
